# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.518 2007-12-11 14:26:51 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

CVS HEAD (????/??/??)
 - (2007/12/11) Fixed bug# 2479 - Unable to retrieve attachments bigger than
    3Mb (on Oracle DB). Changed default read size from 4 MB to 40 MB in
    Kernel/System/DB/oracle.pm:

    $Self->{'DB::Attribute'}      = {
        LongTruncOk => 1,
        LongReadLen => 40 * 1024 * 1024,
    };

 - (2007/12/10) Updated MIME::Tools to current CPAN version 5.425.
 - (2007/12/06) Fixed bug# 2568 - Problems with attachement downloads if the
    active element filter is enabled.
 - (2007/12/05) Fixed bug# 1399 - Missing Translation. Added some translation to
    customer interface.
 - (2007/12/04) Fixed bug# 2257 - Silent ignorance of SMTP / Sendmail errors,
    now we collect the error and log it (which in turn displays it to the user).
 - (2007/11/20) Rewrite of Kernel::System::CSV by using cpan module Text::CSV
    for parsing and generating CSV files (added Text::CSV to
    bin/otrs.checkModules to check it).
 - (2007/11/07) Changed default config of WebMaxFileUpload from 10 MB to
    16 MB.
 - (2007/11/07) Changed Kernel::System::Crypt::PGP to reject any UTF8-strings,
    as these would get autoconverted into ISO - thus garbling the result.
    Currently, only binary octets and ISO-strings are supported as input.
 - (2007/10/25) Improved Kernel::System::Crypt::PGP to return information about
    the PGP-keys that were actually used in Decrypt() and Verify().
 - (2007/10/25) Updated all cpan modules.
 - (2007/10/17) Added GroupLookup() and RoleLookup() to Group.pm and removed the
    two methods GetGroupIdByName() and GetRoleIdByName() which were already marked
    as deprecated.