@@ -2,7 +2,7 @@
 # Ticket/Number/Date.pm - a date ticket number generator
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: Date.pm,v 1.23 2007-10-04 22:39:17 martin Exp $
+# $Id: Date.pm,v 1.24 2007-12-13 01:36:22 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -20,7 +20,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.23 $) [1];
+$VERSION = qw($Revision: 1.24 $) [1];
 
 sub TicketCreateNumber {
     my ( $Self, $JumpCounter ) = @_;
@@ -123,7 +123,7 @@ sub GetTNByString {
     else {
 
         # check default setting
-        if ( $String =~ /\Q$TicketHook\E:+.{0,2}(\d{4,10}$SystemID\d{1,40})/i ) {
+        if ( $String =~ /\Q$TicketHook\E:\s{0,2}(\d{4,10}$SystemID\d{1,40})/i ) {
             return $1;
         }
         else {
